GNOME Bugzilla – Bug 681077
FLAC stream doesn't play
Last modified: 2012-08-03 11:58:29 UTC
Neither Rhythmbox nor Totem are able to play this FLAC stream ( mplayer works OK; I'm still on Fedora 15): http://radio.cesnet.cz:8000/cro-d-dur.flac libavformat file format detected. [ogg @ 0x37b2ae4c00]Estimating duration from bitrate, this may be inaccurate [lavf] stream 0: audio (flac), -aid 0 ========================================================================== Opening audio decoder: [ffmpeg] FFmpeg/libavcodec audio decoders AUDIO: 48000 Hz, 2 ch, s16le, 0.0 kbit/0.00% (ratio: 0->192000) Selected audio codec: [ffflac] afm: ffmpeg (FFmpeg FLAC audio) ========================================================================== AO: [pulse] 48000Hz 2ch s16le (2 bytes per sample) Video: no video Starting playback...
commit 8add212ddfca6e27af48d9ebed25fa0fe01ffadc Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk> Date: Fri Aug 3 13:53:44 2012 +0200 flacdec: improve and relax audio frame parsing ... so as to properly recognize first audio frame. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681077