ext/flac/gstflacdec.c
@@ -445,6 +445,38 @@ gst_flac_dec_scan_got_frame (GstFlacDec * flacdec, guint8 * data, guint size,
   else if (sr == 0x0D || sr == 0x0E)
     sr_from_end = 16;
 
+  val = data[4];
+  /* This is slightly faster than a loop */
+  if (!(val & 0x80)) {
+    val = 0;
+  } else if ((val & 0xc0) && !(val & 0x20)) {
+    val = 1;
+  } else if ((val & 0xe0) && !(val & 0x10)) {
+    val = 2;
+  } else if ((val & 0xf0) && !(val & 0x08)) {
+    val = 3;
+  } else if ((val & 0xf8) && !(val & 0x04)) {
+    val = 4;
+  } else if ((val & 0xfc) && !(val & 0x02)) {
+    val = 5;
+  } else if ((val & 0xfe) && !(val & 0x01)) {
+    val = 6;
+  } else {
+    GST_LOG_OBJECT (flacdec, "failed to read sample/frame");
+    return FALSE;
+  }
+
+  val++;
+  headerlen = 4 + val + (bs_from_end / 8) + (sr_from_end / 8);
+
+  if (gst_flac_calculate_crc8 (data, headerlen) != data[headerlen]) {
+    GST_LOG_OBJECT (flacdec, "invalid checksum");
+    return FALSE;
+  }
+
+  if (!last_sample_num)
+    return TRUE;
+
   /* FIXME: This is can be 36 bit if variable block size is used,
    * fortunately not encoder supports this yet and we check for that
    * above.
@@ -453,14 +485,6 @@ gst_flac_dec_scan_got_frame (GstFlacDec * flacdec, guint8 * data, guint size,
 
   if (val == (guint32) - 1 || val == (guint32) - 2) {
     GST_LOG_OBJECT (flacdec, "failed to read sample/frame");
-    return FALSE;
-  }
-
-  headerlen = 4 + g_unichar_to_utf8 ((gunichar) val, NULL) +
-      (bs_from_end / 8) + (sr_from_end / 8);
-
-  if (gst_flac_calculate_crc8 (data, headerlen) != data[headerlen]) {
-    GST_LOG_OBJECT (flacdec, "invalid checksum");
     return FALSE;
   }
 
@@ -1441,11 +1465,9 @@ gst_flac_dec_chain (GstPad * pad, GstBuffer * buf)
   }
 
   if (dec->framed) {
-    gint64 unused;
-
     /* check if this is a flac audio frame (rather than a header or junk) */
     got_audio_frame = gst_flac_dec_scan_got_frame (dec, GST_BUFFER_DATA (buf),
-        GST_BUFFER_SIZE (buf), &unused);
+        GST_BUFFER_SIZE (buf), NULL);
 
     /* oggdemux will set granulepos in OFFSET_END instead of timestamp */
     if (G_LIKELY (got_audio_frame)) {
